--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Your Name</h1>
+        <h1>Aybanda</h1>
         <p>Welcome to my GitHub project page. I'm currently working on integrating GitHub with my application.</p>
         <p>More details coming soon!</p>
     </div>
